[package]
name = "rstrie"
version = "0.1.0"
edition = "2024"
authors = [ "Homer Riva-Cambrin" ]
description = "A generalized Trie implementation for Rust."
readme = "README.md"
homepage = "https://github.com/DiscordJim/rstrie"
license = "MIT License"
keywords = [ "trie" ]
categories = [ "data structure" ]


[dependencies]

[dev-dependencies]
arbtest = "0.3.2"
