[package]
name = "rstrie"
version = "0.5.0"
edition = "2024"
authors = [ "Homer Riva-Cambrin" ]
description = "A generalized Trie implementation for Rust."
readme = "README.md"
homepage = "https://github.com/DiscordJim/rstrie"
license = "MIT License"
keywords = [ "trie" ]
categories = [ "data structure" ]


[dependencies]

[[bench]]
name = "criterion_bench"
harness = false

[dev-dependencies]
arbitrary = "1.4.1"
arbtest = "0.3.2"
bitvec = "1.0.1"
criterion = "0.5.1"
edit-distance = "2.1.3"
once_cell = "1.21.3"
paste = "1.0.15"
rand = "0.9.1"
rand_distr = "0.5.1"
