[package]
name = "rstrie"
version = "0.5.0"
edition = "2024"
authors = [ "Homer Riva-Cambrin" ]
description = "A generalized Trie implementation for Rust."
readme = "README.md"
homepage = "https://github.com/DiscordJim/rstrie"
license = "MIT"
keywords = [ "trie" ]
categories = [ "data structure" ]

[features]
serde = [ "dep:serde" ]
arbitrary = [ "dep:arbitrary" ]
rkyv = ["dep:rkyv"]



[dependencies]
arbitrary = { version = "1.4.1", optional=true }
rkyv = { version = "0.8.10", optional = true }
serde = { version = "1.0.219", features=["derive"], optional=true }

[[bench]]
name = "criterion_bench"
harness = false

[dev-dependencies]
arbitrary = "1.4.1"
arbtest = "0.3.2"
bincode = { version = "2.0.1", features = ["serde"] }
bitvec = "1.0.1"
criterion = "0.5.1"
edit-distance = "2.1.3"
once_cell = "1.21.3"
paste = "1.0.15"
rand = "0.9.1"
rand_distr = "0.5.1"
serde_json = "1.0.140"
serde_test = "1.0.177"
