[package]
name = "rstrie-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = "1.4.1"
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }

[dependencies.rstrie]
path = ".."
features = ["arbitrary"]

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false
